cr-examples/mlir-tosa/lib/mlir_tosa_c_api.h

typedef struct MLIRFunction_* MLIRFunctionHandle;
typedef struct MLIRValue_* MLIRValueHandle;
typedef struct MLIRType_* MLIRTypeHandle;
MLIRValueHandle mlir_tosa_sub(MLIRFunctionHandle function,
                              MLIRValueHandle lhs,
                              MLIRValueHandle rhs,
                              MLIRTypeHandle resultType);
MLIRValueHandle mlir_tosa_mul(MLIRFunctionHandle function,
                              MLIRValueHandle lhs,
                              MLIRValueHandle rhs,
                              MLIRTypeHandle resultType);
MLIRValueHandle mlir_tosa_negate(MLIRFunctionHandle function,
                                 MLIRValueHandle input,
                                 MLIRTypeHandle resultType);
MLIRValueHandle mlir_tosa_reciprocal(MLIRFunctionHandle function,
                                     MLIRValueHandle input,
                                     MLIRTypeHandle resultType);
MLIRValueHandle mlir_tosa_exp(MLIRFunctionHandle function,
                              MLIRValueHandle input,
                              MLIRTypeHandle resultType);
MLIRValueHandle mlir_tosa_log(MLIRFunctionHandle function,
                              MLIRValueHandle input,
                              MLIRTypeHandle resultType);