cr-examples/mlir-tosa/src/main/java/mlir/tosa/bindings/mlir_tosa_c_api_h.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_sub(MLIRFunctionHandle function, MLIRValueHandle lhs, MLIRValueHandle rhs, MLIRTypeHandle resultType)
     * }
     */
    public static FunctionDescriptor mlir_tosa_sub$descriptor() {
        return mlir_tosa_sub.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_sub(MLIRFunctionHandle function, MLIRValueHandle lhs, MLIRValueHandle rhs, MLIRTypeHandle resultType)
     * }
     */
    public static MethodHandle mlir_tosa_sub$handle() {
        return mlir_tosa_sub.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_sub(MLIRFunctionHandle function, MLIRValueHandle lhs, MLIRValueHandle rhs, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_sub$address() {
        return mlir_tosa_sub.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_sub(MLIRFunctionHandle function, MLIRValueHandle lhs, MLIRValueHandle rhs, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_sub(MemorySegment function, MemorySegment lhs, MemorySegment rhs, MemorySegment resultType) {
        var mh$ = mlir_tosa_sub.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_tosa_sub", function, lhs, rhs, resultType);
            }
            return (MemorySegment)mh$.invokeExact(function, lhs, rhs, resultType);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_tosa_mul {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_tosa_mul");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_mul(MLIRFunctionHandle function, MLIRValueHandle lhs, MLIRValueHandle rhs, MLIRTypeHandle resultType)
     * }
     */
    public static FunctionDescriptor mlir_tosa_mul$descriptor() {
        return mlir_tosa_mul.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_mul(MLIRFunctionHandle function, MLIRValueHandle lhs, MLIRValueHandle rhs, MLIRTypeHandle resultType)
     * }
     */
    public static MethodHandle mlir_tosa_mul$handle() {
        return mlir_tosa_mul.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_mul(MLIRFunctionHandle function, MLIRValueHandle lhs, MLIRValueHandle rhs, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_mul$address() {
        return mlir_tosa_mul.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_mul(MLIRFunctionHandle function, MLIRValueHandle lhs, MLIRValueHandle rhs, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_mul(MemorySegment function, MemorySegment lhs, MemorySegment rhs, MemorySegment resultType) {
        var mh$ = mlir_tosa_mul.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_tosa_mul", function, lhs, rhs, resultType);
            }
            return (MemorySegment)mh$.invokeExact(function, lhs, rhs, resultType);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_tosa_negate {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_tosa_negate");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_negate(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static FunctionDescriptor mlir_tosa_negate$descriptor() {
        return mlir_tosa_negate.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_negate(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static MethodHandle mlir_tosa_negate$handle() {
        return mlir_tosa_negate.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_negate(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_negate$address() {
        return mlir_tosa_negate.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_negate(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_negate(MemorySegment function, MemorySegment input, MemorySegment resultType) {
        var mh$ = mlir_tosa_negate.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_tosa_negate", function, input, resultType);
            }
            return (MemorySegment)mh$.invokeExact(function, input, resultType);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_tosa_reciprocal {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_tosa_reciprocal");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_reciprocal(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static FunctionDescriptor mlir_tosa_reciprocal$descriptor() {
        return mlir_tosa_reciprocal.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_reciprocal(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static MethodHandle mlir_tosa_reciprocal$handle() {
        return mlir_tosa_reciprocal.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_reciprocal(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_reciprocal$address() {
        return mlir_tosa_reciprocal.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_reciprocal(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_reciprocal(MemorySegment function, MemorySegment input, MemorySegment resultType) {
        var mh$ = mlir_tosa_reciprocal.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_tosa_reciprocal", function, input, resultType);
            }
            return (MemorySegment)mh$.invokeExact(function, input, resultType);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_tosa_exp {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_tosa_exp");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_exp(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static FunctionDescriptor mlir_tosa_exp$descriptor() {
        return mlir_tosa_exp.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_exp(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static MethodHandle mlir_tosa_exp$handle() {
        return mlir_tosa_exp.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_exp(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_exp$address() {
        return mlir_tosa_exp.ADDR;
    }

    /**
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_exp(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_exp(MemorySegment function, MemorySegment input, MemorySegment resultType) {
        var mh$ = mlir_tosa_exp.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("mlir_tosa_exp", function, input, resultType);
            }
            return (MemorySegment)mh$.invokeExact(function, input, resultType);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class mlir_tosa_log {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER,
            mlir_tosa_c_api_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("mlir_tosa_log");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_log(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static FunctionDescriptor mlir_tosa_log$descriptor() {
        return mlir_tosa_log.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_log(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static MethodHandle mlir_tosa_log$handle() {
        return mlir_tosa_log.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * MLIRValueHandle mlir_tosa_log(MLIRFunctionHandle function, MLIRValueHandle input, MLIRTypeHandle resultType)
     * }
     */
    public static MemorySegment mlir_tosa_log$address() {
        return mlir_tosa_log.ADDR;
    }
